<resources>
    <string name="app_name">NutriApp</string>
    <string name="title_home">About</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Results</string>
    <string name="welcome">Welcome to NutriApp !</string>
    <string name="select_weight">Select Weight</string>
    <string name="_0">0</string>
    <string name="type">Type..</string>
    <string name="lets_go">Lets go!</string>
    <string name="intro">Use this App to know the nutritional value of your recipes.</string>
    <string name="intro1">In the Search Page add your ingredients one by one and view the nutritional             value on the results page.</string>
    <string name="intro2">Happy cooking !</string>
    <string name="hint1">Add the recepie ingredients using above options!</string>
    <string name="hint2">Weight..</string>
    <string name="hint3">Ingredient..</string>
    <string name="button1">Add</string>
    <string name="hint4">Go!</string>
    <string name="n_health_labels_n">\n    Health Labels:\n </string>
    <string name="vitamin_d">Vitamin D</string>
    <string name="vitamin_c">Vitamin C</string>
    <string name="app_logo">App Logo</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="calories">Calories</string>
    <string name="water">Water</string>
    <string name="fat">Fat</string>
    <string name="sugar">Sugar</string>
    <string name="fiber">Fiber</string>
    <string name="calcium">Calcium</string>
    <string name="sodium">Sodium</string>
    <string name="iron">Iron</string>
    <string name="potassium">Potassium</string>
    <string-array name="options_array">
        <item>g</item>
        <item>mg</item>
        <item>kg</item>
        <item>oz</item>
    </string-array>
</resources>